ci: binary size included in each release
Part of: https://linear.app/customerio/issue/MBL-155/track-the-binary-size-of-our-ios-sdk-upon-every-release

Allowing us to see the binary size of each release of our SDK. This is done by generating binary size reports to local files. Then, these files are committed to git on each release. 

Testing criteria: 
To test this, I modified the deploy-sdk workflow to only generate the report files (skip running semantic-release and cocoapods). I then ran this workflow by creating a draft PR. 

Notes for reviewers:
* binny is complex to get working on Linux. I noticed that you either have to compile it from source or use outdated pre-made builds of it. Installing on mac is more sustainable long-term so I suggest we stick to running bloaty on mac, only, on the CI. 
* I noticed that I was beginning to copy and paste the same code over and over again for downloading the latest main branch build and generating the SDK size reports. For this commit, I opted to making these tasks re-usable by creating dedicated github actions to do these repetitive tasks. In a future PR, I plan to refactor the workflow files to all use these re-usable actions. That's out of scope for this commit. 

commit-id:b7178f40

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -19,7 +19,7 @@
             "changelogFile": "CHANGELOG.md"
         }],
         ["@semantic-release/git", {
-            "assets": ["CHANGELOG.md", "Sources/Common/Version.swift", "*.podspec"],
+            "assets": ["CHANGELOG.md", "Sources/Common/Version.swift", "*.podspec", "reports/*"],
             "message": "chore: prepare for ${nextRelease.version}\n\n${nextRelease.notes}"
         }],
         ["@semantic-release/github", {
