--- a/.github/workflows/deploy-sdk.yml
+++ b/.github/workflows/deploy-sdk.yml
@@ -17,30 +17,30 @@ permissions:
 jobs:
   # We can only generate SDK size reports on macOS and we prefer to run deployments on Linux because macOS resources are limited. 
   # Therefore, generating SDK reports is a separate job that runs before deployment.
-  generate-sdk-size-report:
-    name: Generate SDK size report to attach to the release 
-    runs-on: macos-14
-    # In order to pass data from 1 action to another, you use outputs. 
-    # These are the generated reports that the deployment action depends on. 
-    outputs:
-      sdk-size-report: ${{ steps.generate-sdk-size-report.outputs.sdk-size-report }}
-      sdk-size-including-dependencies-report: ${{ steps.generate-sdk-size-report.outputs.sdk-size-including-dependencies-report }}
-    steps:
-      - uses: actions/checkout@v4
+  # generate-sdk-size-report:
+  #   name: Generate SDK size report to attach to the release 
+  #   runs-on: macos-14
+  #   # In order to pass data from 1 action to another, you use outputs. 
+  #   # These are the generated reports that the deployment action depends on. 
+  #   outputs:
+  #     sdk-size-report: ${{ steps.generate-sdk-size-report.outputs.sdk-size-report }}
+  #     sdk-size-including-dependencies-report: ${{ steps.generate-sdk-size-report.outputs.sdk-size-including-dependencies-report }}
+  #   steps:
+  #     - uses: actions/checkout@v4
 
-      - name: Download the latest main sample app build to generate SDK size diff report       
-        id: main-sample-app-build
-        uses: ./.github/actions/main-sample-app-build
+  #     - name: Download the latest main sample app build to generate SDK size diff report       
+  #       id: main-sample-app-build
+  #       uses: ./.github/actions/main-sample-app-build
 
-      - uses: ./.github/actions/generate-sdk-size-report      
-        id: generate-sdk-size-report
-        with:
-          apn-app-xcarchive-name: ${{ steps.main-sample-app-build.outputs.apn-app-xcarchive-name }}
-          generate-main-diff-report: false
+  #     - uses: ./.github/actions/generate-sdk-size-report      
+  #       id: generate-sdk-size-report
+  #       with:
+  #         apn-app-xcarchive-name: ${{ steps.main-sample-app-build.outputs.apn-app-xcarchive-name }}
+  #         generate-main-diff-report: false
 
   deploy-git-tag:
     name: Deploy git tag
-    needs: [generate-sdk-size-report]
+#    needs: [generate-sdk-size-report]
     runs-on: ubuntu-latest
     outputs:
       new_release_git_head: ${{ steps.semantic-release.outputs.new_release_git_head }}
@@ -57,18 +57,18 @@ jobs:
 
       # We want to track the SDK binary size for each release. 
       # The reports is pushed by semantic-release action below by including files listed in the `assets` array in the `.releaserc` file.
-      - name: Write SDK size reports to file to include in the release
-        run: |
-          mkdir -p reports
-          echo "${{ needs.generate-sdk-size-report.outputs.sdk-size-report }}" > reports/sdk-binary-size.txt
-          echo "${{ needs.generate-sdk-size-report.outputs.sdk-size-including-dependencies-report }}" > reports/sdk-binary-size-including-dependencies.txt
+      # - name: Write SDK size reports to file to include in the release
+      #   run: |
+      #     mkdir -p reports
+      #     echo "${{ needs.generate-sdk-size-report.outputs.sdk-size-report }}" > reports/sdk-binary-size.txt
+      #     echo "${{ needs.generate-sdk-size-report.outputs.sdk-size-including-dependencies-report }}" > reports/sdk-binary-size-including-dependencies.txt
 
-          echo "Verifying the reports got written to the file system. If the files are not empty, they were generated successfully..."
-          echo "SDK binary size report:"
-          head reports/sdk-binary-size.txt
+      #     echo "Verifying the reports got written to the file system. If the files are not empty, they were generated successfully..."
+      #     echo "SDK binary size report:"
+      #     head reports/sdk-binary-size.txt
     
-          echo "SDK binary size including dependencies report:"
-          head reports/sdk-binary-size-including-dependencies.txt   
+      #     echo "SDK binary size including dependencies report:"
+      #     head reports/sdk-binary-size-including-dependencies.txt   
     
       # Semantic-release tool is used to:
       # 1. Determine the next semantic version for the software during deployment.
