--- a/.github/actions/generate-sdk-size-report/action.yml
+++ b/.github/actions/generate-sdk-size-report/action.yml
@@ -49,7 +49,7 @@ runs:
     if: github.ref == 'refs/heads/main'   
     uses: ./.github/actions/main-sample-app-build 
     with:
-      apn-app-xcarchive-name: ${{ steps.build-sample-app.outputs.app-xcarchive-name }}
+      set-latest-main-build: ${{ steps.build-sample-app.outputs.app-xcarchive-name }}
 
   - name: Make the SDK size report
     uses: mathiasvr/command-output@v2.0.0
