fix ci building sample apps

--- a/.github/actions/build-sample-app/action.yml
+++ b/.github/actions/build-sample-app/action.yml
@@ -103,7 +103,7 @@ runs:
     - name: Update app version to uniquely identify build for easier finding later. 
       uses: maierj/fastlane-action@v3.1.0
       with:
-        lane: "iossdk_update_app_version"
+        lane: "ios iossdk_update_app_version"
         subdirectory: "Apps/${{ inputs.sample-app }}"
         options: ${{ inputs.fastlane-build-args }}
 
