ci: enable feature branch builds

--- a/.github/workflows/build-sample-apps.yml
+++ b/.github/workflows/build-sample-apps.yml
@@ -3,7 +3,7 @@ name: Build sample apps
 on: 
   pull_request: # build sample apps for every commit pushed to an open pull request (including drafts)
   push: 
-    branches: [main]
+    branches: [ main, feature/* ]
   workflow_dispatch: # allow manual run     
 
 concurrency: # cancel previous workflow run if one exists. 
