--- a/.github/actions/main-sample-app-build/action.yml
+++ b/.github/actions/main-sample-app-build/action.yml
@@ -78,7 +78,8 @@ runs:
         fastlane-build-args: '{"app_version": "1.0.0", "build_number": "1"}'
         # workspace credentials do not matter since we are not using this app build. 
         customerio-workspace-siteid: "12345"
-        customerio-workspace-cdp-api-key: "12345"      
+        customerio-workspace-cdp-api-key: "12345"
+        customerio-workspace-name: "Dummy Workspace"
         GOOGLE_CLOUD_MATCH_READONLY_SERVICE_ACCOUNT_B64: ${{ inputs.GOOGLE_CLOUD_MATCH_READONLY_SERVICE_ACCOUNT_B64 }}
 
     # It's easiest if the latest main build always has the same name that easily identifies it. 
